# quantagent-rl

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
agents/: README.md  __init__.py  agents_module_demo.ipynb  base.py  company_agent.py  config.py  embedder.py  llm.py  macro_agent.py  orchestrator.py  pipeline.py  schemas.py  sector_agent.py  tools.py
backtest/: README.md  __init__.py  backtest_module_demo.ipynb  config.py  engine.py  metrics.py  report.py
data/: README.md  __init__.py  config.py  data_module_demo.ipynb  features.py  ingestion.py  pipeline.py  universe.py
forecasting/: README.md  __init__.py  config.py  factors.py  forecasting_module_demo.ipynb  garch.py  pipeline.py  regime.py
rl/: README.md  __init__.py  agent.py  config.py  env.py  pipeline.py  reward.py  rl_module_demo.ipynb  state.py
