[project]
name = "quantagent-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.34",
    "anthropic>=0.34",
    "arch>=7.0",
    "beautifulsoup4>=4.12",
    "bitsandbytes>=0.43",
    "ddgs>=9.13.0",
    "edgartools>=2.20",
    "fredapi>=0.5.2",
    "gymnasium>=0.29",
    "hmmlearn>=0.3.3",
    "httpx>=0.27",
    "ipykernel>=6.29",
    "joblib>=1.4",
    "jupyter>=1.1",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langgraph>=0.2",
    "loguru>=0.7",
    "lxml>=5.2",
    "matplotlib>=3.9",
    "numpy>=1.26",
    "pandas>=2.2",
    "plotly>=5.22",
    "pydantic>=2.8",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "seaborn>=0.13",
    "sentence-transformers>=3.0",
    "stable-baselines3>=2.3",
    "statsmodels>=0.14",
    "streamlit>=1.38",
    "torch>=2.3",
    "tqdm>=4.66",
    "transformers>=4.46",
    "vectorbt>=0.26",
    "yfinance>=0.2.50",
]
